# TheRayTracerChallenge

./: .gitignore  CMakeLists.txt  README.md
images_generated/: Chapter_4_Clock_Transform_Challenge.ppm  Chapter_7_PuttingItAllTogether_small.ppm  free_fall.ppm
runner/: CMakeLists.txt  Environment.cpp  Environment.h  Projectile.cpp  Projectile.h  main.cpp
src/: BlendPattern.cpp  BlendPattern.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CheckersPattern.cpp  CheckersPattern.h  Color.cpp  Color.h  Computations.cpp  Computations.h  Cube.cpp  Cube.h  GradientPattern.cpp  GradientPattern.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Mat4.cpp  Mat4.h  Material.cpp  Material.h  Pattern.cpp  Pattern.h  Pattern_for_Test.cpp  Pattern_for_Test.h  Plane.cpp  Plane.h  Point.cpp  Point.h  RadialGradientPattern.cpp  RadialGradientPattern.h  Ray.cpp  Ray.h  RayObject.cpp  RayObject.h  RayObject_for_Test.cpp  (+19 more)
tests/: BlendPattern_Test.cpp  CMakeLists.txt  Camera_Test.cpp  Canvas_Test.cpp  CheckersPattern_Test.cpp  Color_Test.cpp  Computations_Test.cpp  Cube_Test.cpp  GradientPattern_Test.cpp  Intersection_Test.cpp  Light_Test.cpp  Mat4_Test.cpp  Material_Test.cpp  Pattern_Test.cpp  Plane_Test.cpp  Point_Test.cpp  RadialGradientPattern_Test.cpp  RayObject_Test.cpp  Ray_Test.cpp  RingPattern_Test.cpp  Save_Test.cpp  Scene_Test.cpp  SolidColorPattern_Test.cpp  Sphere_Test.cpp  StripePattern_Test.cpp  Tuple_Test.cpp  Utils_Test.cpp  Vector_Test.cpp  pch.h
